--- a/angela/angela/LoginViewController.xib
+++ b/angela/angela/LoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="angela" customModuleProvider="target">
@@ -27,15 +27,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="400" height="714"/>
                     </variation>
                 </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Senha" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="R5F-2L-CJj">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="senha" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="R5F-2L-CJj">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="Niq-M2-6hj"/>
                         <constraint firstAttribute="height" constant="50" id="wbX-Im-wvp"/>
                     </constraints>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                             <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -101,14 +101,14 @@
                         </mask>
                     </variation>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="qvl-Gl-i53">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="e-mail" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="qvl-Gl-i53">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="1Pi-zn-3Fk"/>
                         <constraint firstAttribute="width" constant="320" id="63K-w7-bAc"/>
                     </constraints>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
@@ -222,7 +222,9 @@
                 <constraint firstItem="j65-R5-NOL" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2Lo-UA-oP4"/>
                 <constraint firstAttribute="trailing" secondItem="ip7-TA-4Rv" secondAttribute="trailing" id="52U-jz-yCn"/>
                 <constraint firstItem="M4O-il-d0a" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9NY-ak-jwN"/>
-                <constraint firstItem="6fV-2T-YqX" firstAttribute="top" secondItem="ip7-TA-4Rv" secondAttribute="bottom" constant="2" id="AEe-3u-dlv"/>
+                <constraint firstItem="6fV-2T-YqX" firstAttribute="top" secondItem="ip7-TA-4Rv" secondAttribute="bottom" constant="2" id="AEe-3u-dlv">
+                    <variation key="widthClass=compact" constant="9"/>
+                </constraint>
                 <constraint firstItem="6fV-2T-YqX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FmP-1y-4eH"/>
                 <constraint firstItem="8cN-gQ-ecX" firstAttribute="top" secondItem="M4O-il-d0a" secondAttribute="bottom" constant="8" id="GQG-9A-YSu"/>
                 <constraint firstItem="R5F-2L-CJj" firstAttribute="top" secondItem="qvl-Gl-i53" secondAttribute="bottom" constant="8" id="NDz-Ub-ryb"/>
@@ -253,24 +255,24 @@
                     <exclude reference="6fV-2T-YqX"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="9NY-ak-jwN"/>
-                    <exclude reference="mAM-Nw-V35"/>
-                    <exclude reference="GQG-9A-YSu"/>
-                    <exclude reference="Oqu-ce-5Rc"/>
-                    <exclude reference="WR8-xn-8BD"/>
-                    <exclude reference="ftW-rb-piX"/>
                     <exclude reference="NDz-Ub-ryb"/>
                     <exclude reference="YGV-P0-0de"/>
-                    <exclude reference="2Lo-UA-oP4"/>
-                    <exclude reference="vEN-bX-hht"/>
-                    <exclude reference="O2a-sO-ioR"/>
-                    <exclude reference="uk1-Ce-S9S"/>
-                    <exclude reference="52U-jz-yCn"/>
-                    <exclude reference="gWk-Mn-2RJ"/>
-                    <exclude reference="nDv-Bb-sGi"/>
+                    <exclude reference="WR8-xn-8BD"/>
+                    <exclude reference="ftW-rb-piX"/>
                     <exclude reference="AEe-3u-dlv"/>
                     <exclude reference="FmP-1y-4eH"/>
                     <exclude reference="oTj-PK-VSu"/>
+                    <exclude reference="52U-jz-yCn"/>
+                    <exclude reference="gWk-Mn-2RJ"/>
+                    <exclude reference="nDv-Bb-sGi"/>
+                    <exclude reference="2Lo-UA-oP4"/>
+                    <exclude reference="vEN-bX-hht"/>
+                    <exclude reference="GQG-9A-YSu"/>
+                    <exclude reference="Oqu-ce-5Rc"/>
+                    <exclude reference="O2a-sO-ioR"/>
+                    <exclude reference="uk1-Ce-S9S"/>
+                    <exclude reference="9NY-ak-jwN"/>
+                    <exclude reference="mAM-Nw-V35"/>
                 </mask>
             </variation>
             <variation key="widthClass=compact">
@@ -286,24 +288,24 @@
                     <include reference="6fV-2T-YqX"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="9NY-ak-jwN"/>
-                    <include reference="mAM-Nw-V35"/>
-                    <include reference="GQG-9A-YSu"/>
-                    <include reference="Oqu-ce-5Rc"/>
-                    <include reference="WR8-xn-8BD"/>
-                    <include reference="ftW-rb-piX"/>
                     <include reference="NDz-Ub-ryb"/>
                     <include reference="YGV-P0-0de"/>
-                    <include reference="2Lo-UA-oP4"/>
-                    <include reference="vEN-bX-hht"/>
-                    <include reference="O2a-sO-ioR"/>
-                    <include reference="uk1-Ce-S9S"/>
-                    <include reference="52U-jz-yCn"/>
-                    <include reference="gWk-Mn-2RJ"/>
-                    <include reference="nDv-Bb-sGi"/>
+                    <include reference="WR8-xn-8BD"/>
+                    <include reference="ftW-rb-piX"/>
                     <include reference="AEe-3u-dlv"/>
                     <include reference="FmP-1y-4eH"/>
                     <include reference="oTj-PK-VSu"/>
+                    <include reference="52U-jz-yCn"/>
+                    <include reference="gWk-Mn-2RJ"/>
+                    <include reference="nDv-Bb-sGi"/>
+                    <include reference="2Lo-UA-oP4"/>
+                    <include reference="vEN-bX-hht"/>
+                    <include reference="GQG-9A-YSu"/>
+                    <include reference="Oqu-ce-5Rc"/>
+                    <include reference="O2a-sO-ioR"/>
+                    <include reference="uk1-Ce-S9S"/>
+                    <include reference="9NY-ak-jwN"/>
+                    <include reference="mAM-Nw-V35"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="361" y="275"/>
