--- a/angela/angela/NovoEventoViewController.xib
+++ b/angela/angela/NovoEventoViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NovoEventoViewController" customModule="angela" customModuleProvider="target">
@@ -21,12 +21,13 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="ghm-lr-Nc9">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="nome do evento" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="ghm-lr-Nc9">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="DS7-wg-lpL"/>
                         <constraint firstAttribute="width" constant="320" id="kbH-RC-vzC"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <userDefinedRuntimeAttributes>
@@ -47,7 +48,7 @@
                         </mask>
                     </variation>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Lugar" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="jav-wJ-l28">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="local do evento" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="jav-wJ-l28">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="2SS-Md-MeF"/>
@@ -55,6 +56,7 @@
                         <constraint firstAttribute="height" constant="50" id="VhP-wg-p62"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="e93-2i-PZz"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <userDefinedRuntimeAttributes>
@@ -101,12 +103,13 @@
                         <action selector="proximoClicked:" destination="-1" eventType="touchUpInside" id="6hI-Py-V0c"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Hora de Início" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="9Wk-1a-nUS">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="hora de início" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="9Wk-1a-nUS">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="Skg-BY-15G"/>
                         <constraint firstAttribute="height" constant="50" id="lZV-E0-yOG"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <userDefinedRuntimeAttributes>
@@ -127,7 +130,7 @@
                         </mask>
                     </variation>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Notificacoes " textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="x3o-8I-iI3">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="intervalo de notificação em min" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="x3o-8I-iI3">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="ELA-AE-Fba">
@@ -135,6 +138,7 @@
                         </constraint>
                         <constraint firstAttribute="height" constant="50" id="QWW-YZ-K3A"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <userDefinedRuntimeAttributes>
@@ -155,12 +159,13 @@
                         </mask>
                     </variation>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Hora Final" textAlignment="natural" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="WTK-jm-OBq">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="hora de término" textAlignment="center" minimumFontSize="17" background="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="WTK-jm-OBq">
                     <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="BZ4-zi-L6Z"/>
                         <constraint firstAttribute="width" constant="322" id="JVt-1y-8Bn"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <userDefinedRuntimeAttributes>
@@ -224,16 +229,16 @@
                     <exclude reference="BVd-t4-klP"/>
                 </mask>
                 <mask key="constraints">
+                    <exclude reference="0oP-yY-G3a"/>
+                    <exclude reference="4pF-ud-yfU"/>
+                    <exclude reference="3j3-BL-TGc"/>
+                    <exclude reference="Z6B-s1-Xh6"/>
                     <exclude reference="2tN-W8-TCK"/>
                     <exclude reference="MVq-Ak-H50"/>
                     <exclude reference="QAn-To-IQv"/>
                     <exclude reference="Vxu-RU-JpY"/>
                     <exclude reference="gOV-1J-DM3"/>
                     <exclude reference="jwY-kS-Cyr"/>
-                    <exclude reference="0oP-yY-G3a"/>
-                    <exclude reference="4pF-ud-yfU"/>
-                    <exclude reference="3j3-BL-TGc"/>
-                    <exclude reference="Z6B-s1-Xh6"/>
                     <exclude reference="CiY-20-o6R"/>
                     <exclude reference="hAl-Z2-evM"/>
                     <exclude reference="2pb-a2-CMv"/>
@@ -255,16 +260,16 @@
                     <include reference="BVd-t4-klP"/>
                 </mask>
                 <mask key="constraints">
+                    <include reference="0oP-yY-G3a"/>
+                    <include reference="4pF-ud-yfU"/>
+                    <include reference="3j3-BL-TGc"/>
+                    <include reference="Z6B-s1-Xh6"/>
                     <include reference="2tN-W8-TCK"/>
                     <include reference="MVq-Ak-H50"/>
                     <include reference="QAn-To-IQv"/>
                     <include reference="Vxu-RU-JpY"/>
                     <include reference="gOV-1J-DM3"/>
                     <include reference="jwY-kS-Cyr"/>
-                    <include reference="0oP-yY-G3a"/>
-                    <include reference="4pF-ud-yfU"/>
-                    <include reference="3j3-BL-TGc"/>
-                    <include reference="Z6B-s1-Xh6"/>
                     <include reference="CiY-20-o6R"/>
                     <include reference="hAl-Z2-evM"/>
                     <include reference="2pb-a2-CMv"/>
